add pic and content and basic styling

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,212 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+    <div class="container">
+      <div class="white-card top text-center">
+        <%= image_tag "my_profile_pic.jpeg", alt: "Profile Pic Lucca Kaiser", id:"profile" %>
+        <h1>Lucca Kaiser</h1>
+          <h2>Developer</h2>
+            <p class="welcome-description">Welcome to my profile page! Feel free to contact me if there are any questions.</p>
+            <a target="_blank" rel="noopener noreferrer" href = "mailto: luccakaiser@gmail.com" class="btn btn-yellow">Contact Me!</a>
+      </div>
+
+
+        <div class="white-card top text-center">
+            <h2>About me</h2>
+            <div class="row">
+              <div class="col-12 col-md-4">
+                <i class="fas fa-birthday-cake"></i>
+                <h3>March, 1990</h3>
+              </div>
+              <div class="col-12 col-md-4">
+                <i class="fas fa-plus-square"></i>
+                <h3>Swiss</h3>
+              </div>
+              <div class="col-12 col-md-4">
+                <i class="fas fa-address-card"></i>
+                <h3>10247 Berlin</h3>
+              </div>
+
+            </div>
+        </div>
+
+
+
+        <div class="white-card top text-center">
+          <h2>Education</h2>
+          <i class="fas fa-graduation-cap"></i>
+        </div>
+
+        <div class="white-card top text-center">
+            <h2>Experience</h2>
+            <i class="fas fa-briefcase"></i>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <%= link_to 'https://www.boostability.com/' do %>
+              <%= image_tag "boostability.jpeg", alt: "Boostability", class:"pic-size-logo" %>
+                <h3>Boostability</h3>
+                <p class="job-description">SEO Account Manager</p>
+                <p class="job-description">2018</p>
+              <% end %>
+            </div>
+            <div class="col-12 col-md-6">
+              <%= link_to 'http://dls-lehrmittel.ch/_content/default.aspx' do %>
+                <%= image_tag "dls.jpeg", alt: "DLS Lehrmittel", class:"pic-size-logo"  %>
+                <p class="job-description">Account Manager</p>
+                <p class="job-description">2011-2016</p>
+              <% end %>
+            </div>
+          </div>
+        </div>
+
+        <div class="white-card top text-center">
+            <h2>Interests</h2>
+            <div class="row">
+              <div class="col-16 col-md-4">
+                <i class="fas fa-futbol"></i>
+                <h3>Football/Sport</h3>
+              </div>
+              <div class="col-16 col-md-4">
+                <i class="fab fa-spotify"></i>
+                <h3>Music</h3>
+              </div>
+              <div class="col-16 col-md-4">
+                <i class="fas fa-gamepad"></i>
+                <h3>Video Games</h3>
+              </div>
+            </div>
+        </div>
+
+      <div class="white-card text-center">
+        <h2>Programming Languages & Skills</h2>
+        <i class="fas fa-laptop"></i>
+        <div class="row">
+          <div class="col-6 col-md-4">
+            <%= image_tag "ruby.png", alt: "Ruby", class:"pic-size" %>
+          </div>
+          <div class="col-6 col-md-4">
+            <%= image_tag "rails.png", alt: "Rails", class:"pic-size" %>
+          </div>
+          <div class="col-6 col-md-4">
+            <%= image_tag "github.png", alt: "Github", class:"pic-size" %>
+          </div>
+          <div class="col-6 col-md-4">
+            <%= image_tag "html.svg", alt: "HTML", class:"pic-size" %>
+          </div>
+          <div class="col-6 col-md-4">
+            <%= image_tag "css.svg", alt: "CSS", class:"pic-size" %>
+          </div>
+          <div class="col-6 col-md-4">
+            <%= image_tag "javascript.png", alt: "JavaScript", class:"pic-size" %>
+          </div>
+        </div>
+      </div>
+
+      <div class="white-card text-center">
+        <h2>Notable Projects</h2>
+        <i class="fas fa-project-diagram"></i>
+          <div class="row">
+          <div class="col-12 col-md-4">
+            <%= link_to 'https://www.digital-pub.live/' do%>
+              <h3 class="text-center">Digital Pub</h3>
+              <%= image_tag "digital-pub.png", alt: "digital-pub", class:"pic-size-big" %>
+            <% end %>
+          </div>
+          <div class="col-12 col-md-4">
+            <%= link_to 'https://need-a-cocktail.herokuapp.com/' do %>
+                <h3 class="text-center">Need a Cocktail</h3>
+                <%= image_tag "need-a-cocktail.png", alt: "need-a-cocktail", class:"pic-size-big" %>
+            <% end %>
+          </div>
+          <div class="col-12 col-md-4">
+            <%= link_to 'https://sportify-tococorocko.herokuapp.com/' do%>
+              <h3 class="text-center">Sportify</h3>
+              <%= image_tag "sportify.png", alt: "Sportify", class:"pic-size-big" %>
+            <% end %>
+          </div>
+        </div>
+
+      </div>
+
+
+
+<!--       <div class="white-card text-center">
+        <h2>My favourite tv shows</h2>
+        <table class="table-class">
+          <tr>
+            <td>
+              <img src="images/breaking_bad.jpeg" alt="Breaking Bad" class="pic-size" >
+            </td>
+            <td>
+              <h3>Breaking Bad</h3>
+                <p>A high school chemistry teacher diagnosed with inoperable lung cancer turns to manufacturing and selling methamphetamine in order to secure his family's future.</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="images/game_of_thrones.jpg" alt="Game of Thrones" class="pic-size">
+            </td>
+            <td>
+              <h3>Game of Thrones</h3>
+                  <p>Nine noble families fight for control over the mythical lands of Westeros, while an ancient enemy returns after being dormant for thousands of years.</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="images/modern_family.jpeg" alt="Modern Family" class="pic-size">
+            </td>
+            <td>
+              <h3>Modern Family</h3>
+                <p>Three different, but related families face trials and tribulations in their own uniquely comedic ways.</p>
+            </td>
+          </tr>
+        </table>
+      </div> -->
+
+      <div class="white-card text-center">
+        <ul class="list-inline">
+          <li class="text-center">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/lucca.keisherson">
+              <i class="fab fa-facebook-f"></i>
+              <p>Facebook</p>
+            </a>
+          </li>
+          <li class="text-center">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/lucca-k-17b2a9146/">
+              <i class="fab fa-linkedin-in"></i>
+              <p>Linkedin</p>
+            </a>
+          </li>
+          <li class="text-center">
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Tococorocko">
+              <i class="fab fa-twitter"></i>
+              <p> Twitter </p>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/tococorocko">
+              <i class="fab fa-github"></i></i>
+              <p> Github</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+<!--       <div class="white-card text-right">
+        <h2>About this page</h2>
+          <p> ©Lucca Kaiser</p>
+          <ul class="list-inline">
+            <li>
+              <a href="">
+                <i class="fas fa-heart"></i>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <i class="fa fa-share"></i>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <i class="fa fa-star"></i>
+              </a>
+            </li>
+          </ul>
+        </div> -->
+    </div>
