--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,147 @@
 // Specific CSS for your home-page
+body {
+  background-color: #EBEBEB;
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: lighter;
+  font-size: 15px;
+  line-height: 1.6em;
+}
+
+h1 {
+  color: #999AC6;
+  font-size: 22px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+  font-weight: normal;
+  color: #B8BACF;
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 0;
+}
+
+h3 {
+  font-weight: normal;
+  color: #B8BACF;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+/*  text-align: left;
+*/  margin: 10px 0;
+}
+
+p {
+    text-align: justify;
+    opacity: 0.8;
+}
+
+a {
+  text-decoration: none;
+  color: #999AC6;
+}
+
+a:hover {
+  text-decoration:none;
+  opacity: 0.6;
+  color: #999AC6;
+}
+
+i {
+  text-align: center;
+  color: #B8BACF;
+  font-size: 40px;
+}
+
+.container {
+  width: 60vw;   /* This sets the width */
+  margin: 30px auto; /* This automatically sets left/right margins */
+}
+
+@media (max-width: 960px) {
+   /*For a screen < 960px, this CSS will be read*/
+  .container {
+    width: 60vw;
+  }
+}
+@media (max-width: 720px) {
+   /*For a screen < 720px, this CSS will be read*/
+  .container {
+    width: 60vw;
+  }
+}
+@media (max-width: 540px) {
+   /*For a screen < 540px, this CSS will be read*/
+  .container {
+    width: 60vw;
+  }
+}
+
+
+#profile {
+  height: 150px;
+  border-radius: 50%;
+  margin: 15px 0;
+}
+
+.welcome-description {
+  text-align: center;
+  font-weight: bolder;
+}
+
+.white-card {
+  border-radius: 3px;
+  background-color: white;
+  margin: 20px auto;
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.1);
+  padding: 20px;
+}
+
+
+.btn-yellow {
+  background-color: #EED4B2;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.btn-yellow:hover {
+  background-color: rgba(238, 212, 178, 1);
+}
+
+.pic-size {
+  height: 70px;
+  margin: 20px;
+}
+
+.pic-size-logo {
+  height: 70px;
+  margin: 5px;
+}
+
+
+.pic-size-big {
+  height: 250px;
+  margin: 5px 5px 5px 0;
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.1);
+}
+
+
+.job-description {
+  text-align: center;
+  margin-bottom: 2px;
+}
+
+.list-inline {
+  padding-left: 0;
+}
+
+.list-inline li {
+  display: inline-block;
+  padding: 20px;
+}
+
+
+.list-inline li i {
+    font-size: 25px;
+}
