add navbar and style page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,7 +41,7 @@
             <div class="col-12 col-md-6">
               <%= link_to 'https://www.boostability.com/' do %>
               <%= image_tag "boostability.jpeg", alt: "Boostability", class:"pic-size-logo" %>
-                <h3>Boostability</h3>
+                <!-- <h3>Boostability</h3> -->
                 <p class="job-description">SEO Account Manager</p>
                 <p class="job-description">2018</p>
               <% end %>
@@ -49,6 +49,7 @@
             <div class="col-12 col-md-6">
               <%= link_to 'http://dls-lehrmittel.ch/_content/default.aspx' do %>
                 <%= image_tag "dls.jpeg", alt: "DLS Lehrmittel", class:"pic-size-logo"  %>
+                <!-- <h3>DLS Lehrmittel AG</h3> -->
                 <p class="job-description">Account Manager</p>
                 <p class="job-description">2011-2016</p>
               <% end %>
