--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 body {
   background-color: #EBEBEB;
-  color: black;
+  color: #B8BACF;
   font-family: 'Open Sans', sans-serif;
   font-weight: lighter;
   font-size: 15px;
@@ -38,13 +38,12 @@ p {
 
 a {
   text-decoration: none;
-  color: #999AC6;
+  color: #616668;
 }
 
 a:hover {
   text-decoration:none;
-  opacity: 0.6;
-  color: #999AC6;
+  color: #EED4B2;
 }
 
 i {
@@ -55,25 +54,25 @@ i {
 
 .container {
   width: 60vw;   /* This sets the width */
-  margin: 30px auto; /* This automatically sets left/right margins */
+  margin: auto; /* This automatically sets left/right margins */
 }
 
 @media (max-width: 960px) {
    /*For a screen < 960px, this CSS will be read*/
   .container {
-    width: 60vw;
+    width: 70vw;
   }
 }
 @media (max-width: 720px) {
    /*For a screen < 720px, this CSS will be read*/
   .container {
-    width: 60vw;
+    width: 80vw;
   }
 }
 @media (max-width: 540px) {
    /*For a screen < 540px, this CSS will be read*/
   .container {
-    width: 60vw;
+    width: 90vw;
   }
 }
 
@@ -106,7 +105,7 @@ i {
 }
 
 .btn-yellow:hover {
-  background-color: rgba(238, 212, 178, 1);
+  color: #616668;
 }
 
 .pic-size {
